--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -7,7 +7,7 @@ import ObtainGraphApiKey from '../../../shared/obtain-graph-api-key.mdx';
 
 > **Self-hosted supergraphs are an [Enterprise feature](/graphos/enterprise/)** for organizations with advanced performance or compliance requirements.
 >
-> If your organization might benefit from [Enterprise features](../enterprise/), please [get in touch with us!](https://www.apollographql.com/contact-sales/)
+> If your organization _doesn't_ currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).
 
 This tutorial gets you up and running with GraphOS and a self-hosted supergraph. If your organization _doesn't_ currently have an Enterprise plan and you want to test out this functionality, **[sign up for a free Enterprise trial.](../org/plans/#enterprise-trials)**
 
