--- a/src/content/graphos/basics/graphs/creating-a-subgraph.mdx
+++ b/src/content/graphos/basics/graphs/creating-a-subgraph.mdx
@@ -17,10 +17,10 @@ The fastest way to create a new subgraph is to start with one of the templates p
 You start by running `rover template use`, providing it the ID of your chosen template. For example, the following command creates a new directory called `my-subgraph` that contains the boilerplate code for a subgraph written in TypeScript using the Apollo Server library:
 
 ```bash
-rover template use my-subgraph --template=subgraph-typescript-apollo-server
+rover template use "my-subgraph" --template="subgraph-typescript-apollo-server"
 ```
 
-> To see the full list of avaialable template, see the [Rover template docs](/rover/commands/template)
+> To see the full list of available templates, see the [Rover template docs](/rover/commands/template)
 
 After generating the boilerplate code, you can start filling in your business logic. The generated code includes example resolvers for `Query` and `Mutation`, along with some [entity types](/federation/entities/) to use as your starting point. All templates also come with example GitHub Actions workflows to help with [publishing your schema in CI/CD](../delivery/#publishing-with-continuous-delivery).
 
