Add that monographs are enterprise only

--- a/src/content/graphos/basics/graphs/index.mdx
+++ b/src/content/graphos/basics/graphs/index.mdx
@@ -58,7 +58,9 @@ A supergraph consisting of:
 <tr>
 <td>
 
-[Self-hosted supergraph](#self-hosted-supergraphs) (enterprise only)
+[Self-hosted supergraph](#self-hosted-supergraphs)
+
+(Enterprise only)
 
 </td>
 <td>
@@ -77,6 +79,8 @@ Recommended for enterprise organizations that require full customization of thei
 <td>
 
 [Monograph](#monographs)
+
+(Enterprise only)
 
 </td>
 <td>
@@ -165,6 +169,8 @@ Self-hosted supergraphs provide full control over your router, but they also req
 > [Get started with a self-hosted supergraph.](../quickstart/self-hosted/)
 
 ### Monographs
+
+> **Monographs are an [Enterprise feature](/graphos/enterprise/)**.
 
 A **monograph** is a graph that consists of a single GraphQL server with _no_ router:
 
