--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -11,7 +11,7 @@ import ObtainGraphApiKey from '../../../shared/obtain-graph-api-key.mdx';
 
 This tutorial gets you up and running with GraphOS and a self-hosted supergraph. If your organization _doesn't_ currently have an Enterprise plan and you want to test out this functionality, **[sign up for a free Enterprise trial.](../org/plans/#enterprise-trials)**
 
-> **Important:** This tutorial uses **Docker** for containerization of your supergraph's router.
+> **Important:** This tutorial uses [Docker](https://www.docker.com/) for containerization of your supergraph's router.
 
 ## Supergraph concepts
 
@@ -59,7 +59,7 @@ Complete the first step of <a href="./cloud/#1-create-your-apollo-account" targe
 
 #### Create a graph in GraphOS Studio
 
-After you create your Apollo account, create your first graph in GraphOS Studio by follow these steps:
+After you create your Apollo account, create your first graph in GraphOS Studio by following these steps:
 
 <CreateSelfHostedSupergraph />
 
