--- a/src/content/shared/create-self-hosted-supergraph.mdx
+++ b/src/content/shared/create-self-hosted-supergraph.mdx
@@ -11,9 +11,9 @@
 
 3. Specify an organization and title for your graph.
 
-4. Leave the **Graph Architecture** as **Supergraph (default)**.
+4. Leave the **Graph Architecture** as **Supergraph (Default)**.
 
-5. Click **Next**. A dialog like the following appears:
+5. Click **Next**. A modal like the following appears:
 
 <img
   src="../graphos/img/register-schema-dialog.jpg"
@@ -23,4 +23,4 @@
 
 6. Leave the **Supergraph Pipeline Track** dropdown set to its default value.
 
-Your graph has been created.
+Your graph has been created!
