--- a/src/content/graphos/basics/graphs/index.mdx
+++ b/src/content/graphos/basics/graphs/index.mdx
@@ -170,7 +170,7 @@ Self-hosted supergraphs provide full control over your router, but they also req
 
 ### Monographs
 
-> **Monographs are an [Enterprise feature](/graphos/enterprise/)**.
+> Monographs require an Apollo organization on the **Enterprise** plan. [Learn more about plans.](../org/plans/)
 
 A **monograph** is a graph that consists of a single GraphQL server with _no_ router:
 
@@ -186,7 +186,7 @@ flowchart LR;
 
 > ⚠️ **We strongly recommend _against_ monographs!** A monograph introduces significant technical _and_ logistical scaling issues as more teams contribute to your graph and its schema.
 >
-> Additionally, the router provides essential GraphOS functionality beyond support for multiple subgraphs: it also enables powerful features like [`@defer` support](/router/executing-operations/defer-support/) and straightforward [metrics reporting](../metrics/).
+> Additionally, the router provides essential GraphOS functionality beyond support for multiple subgraphs. It also enables powerful features like [`@defer` support](/router/executing-operations/defer-support/) and straightforward [metrics reporting](../metrics/).
 
 ## Creating graphs
 
