Call out that reporting requires an enterprise plan

--- a/src/content/graphos/metrics/sending-operation-metrics.mdx
+++ b/src/content/graphos/metrics/sending-operation-metrics.mdx
@@ -2,9 +2,8 @@
 title: Sending operation metrics to GraphOS
 ---
 
-import ObtainGraphApiKey from '../../shared/obtain-graph-api-key.mdx';
-
-> **If you have a [cloud supergraph](../graphs/#cloud-supergraphs), your router _automatically_ sends operation metrics to GraphOS!** This article is for _other_ types of graphs, such as enterprise supergraphs that run their own instance of the Apollo Router.
+> Reporting metrics from a [monograph](../graphs/#monographs), [self-hosted supergraph](../graphs/#self-hosted-supergraphs), or [Apollo Server](/apollo-server/) requires an [enterprise plan](../org/plans/).
+> If your organization _doesn't_ currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).
 
 ## From the Apollo Router or Apollo Server
 
