--- a/src/content/graphos/metrics/index.mdx
+++ b/src/content/graphos/metrics/index.mdx
@@ -3,11 +3,7 @@ title: Operation metrics in GraphOS
 description: Understand your supergraph's performance
 ---
 
-If you have a [cloud supergraph](../graphs/#cloud-supergraphs), its router _automatically_ reports metrics for the operations that clients run on it.
-
-> For other types of graphs, see [Sending operation metrics to GraphOS](./sending-operation-metrics/).
-
-In addition, you can configure your subgraphs to include [resolver-level traces](#resolver-level-traces) in their responses to your router, which are then also reported to GraphOS.
+Once you've configured your graph to [send operation metrics to GraphOS](./sending-operation-metrics/), you can view them in GraphOS Studio. In addition, you can configure your subgraphs to include [resolver-level traces](#resolver-level-traces) in their responses to your router, which are then also reported to GraphOS.
 
 ## Viewing metrics
 
