Apply suggestions from code review
Co-authored-by: Edward Huang <18322228+shorgi@users.noreply.github.com>

--- a/src/content/shared/create-self-hosted-supergraph.mdx
+++ b/src/content/shared/create-self-hosted-supergraph.mdx
@@ -1,6 +1,6 @@
 1. Go to your organization's **Graphs** tab in [Apollo Studio](https://studio.apollographql.com/).
 
-2. Click **New Graph** in the top right. Studio displays the following dialog:
+2. Click **Create New Graph** in the top right. Studio displays the following dialog:
 
 <img
   className="screenshot"
@@ -9,7 +9,7 @@
   style="margin-bottom: 20px;"
 />
 
-3. Specify an organization and title for your graph.
+3. Specify an **Organization** and **Graph title** for your graph.
 
 4. Leave the **Graph Architecture** as **Supergraph (Default)**.
 
