--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -388,19 +388,21 @@ Now that our router is running, we can quickly open our browser to `localhost:40
 
 While we're here, execute some test queries against the supergraph! We'll look at metrics for those test queries in the next step.
 
-## 6. View operation metrics
+## 6. View operation and field metrics
 
-Because our router is connected to GraphOS, it automatically collects and reports metrics on incoming operations. You can then visualize those metrics in Studio.
+Because our router is connected to GraphOS, it automatically collects and reports metrics on incoming operations and their fields. You can then visualize those metrics in Studio.
 
-Return to [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) and go to your supergraph variant's Operations page, which looks like this:
+Return to [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) and go to your supergraph variant's **Insights** page, which looks like this:
 
 <img
-  src="../../img/operations-quickstart.jpg"
+  src="../../img/insights-quickstart.jpg"
   className="screenshot"
-  alt="The Operations page in Studio after executing an operation"
+  alt="The Insights page in Studio"
 />
 
-The test queries you executed in the previous step should already be represented on this page! (If they aren't there yet, check the page again in a few minutes.) After you update all of your clients to query your router, the Operations page becomes vital to monitoring your supergraph's performance.
+The test queries you executed in the previous step should already be represented on this page. (If they aren't there yet, check the page again in a few minutes.) After you update all of your clients to query your router, the **Insights** page becomes vital to monitoring your supergraph's performance.
+
+Learn more about the available metrics in the [metrics documentation](../metrics).
 
 ## 7. Deploy your router and connect clients
 
