--- a/src/content/graphos/delivery/launches.mdx
+++ b/src/content/graphos/delivery/launches.mdx
@@ -12,6 +12,8 @@ Updates that trigger a launch include:
 - Adding or removing entire subgraphs
 - Migrating types or fields between subgraphs
 - Modifying your [cloud router's configuration](../routing/cloud-configuration/)
+- Updating your build pipeline track
+- Updating the Git commit set in the Git context
 
 A launch might consist entirely of changes that don't affect your supergraph's public API (such as migrating fields between subgraphs).
 
