--- a/src/content/graphos/basics/quickstart/cloud.mdx
+++ b/src/content/graphos/basics/quickstart/cloud.mdx
@@ -357,7 +357,7 @@ Go to your variant's **Insights** page, which looks like this:
 <img
   src="../../img/insights-quickstart.jpg"
   className="screenshot"
-  alt="The Insights page in Studio"
+  alt="The Insights page in GraphOS Studio"
 />
 
 The operations you [executed in the Explorer](#4-query-your-supergraph) should already be represented on this page. After you update all of your clients to query your router, the **Insights** page becomes vital to monitoring your supergraph's performance.
