--- a/src/content/graphos/metrics/index.mdx
+++ b/src/content/graphos/metrics/index.mdx
@@ -3,16 +3,18 @@ title: Metrics and insights in GraphOS
 description: Understand your supergraph's usage and performance
 ---
 
-Once you've configured your graph to send [operation](./sending-operation-metrics/) and [field metrics](./field-usage#reporting-field-usage) to GraphOS, you can view them in GraphOS Studio.
+Monitoring and optimizing your services for performance and efficiency is paramount.
+Once you've configured your graph to send [operation](./sending-operation-metrics/) and [field metrics](./field-usage#reporting-field-usage) to GraphOS, you can view them in GraphOS Studio on the **Insights** page.
+By understanding and acting on these metrics, you can enhance the speed and reliability of your services.
 
 > **Note**: Do you have to report both to make use of the insights page?
 
 ## Viewing metrics
 
-You can visualize operation metrics in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content), from any variant's **Insights** page:
+You can visualize and examine operation metrics in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content), from any variant's **Insights** page:
 
 <img
-  src="../img/studio-metrics.jpg"
+  src="../img/insights-quickstart.jpg"
   className="screenshot"
   alt="Apollo Studio metrics view"
 />
@@ -25,4 +27,6 @@ The **Insights** page offers:
 - Error metrics
 - [Resolver-level traces](#resolver-level-traces), if you've configured them
 
-Check out the operation and field metrics pages to learn more.
+Check out the [Operations metrics](./operations) and [Field usage](./field-usage) pages to learn more.
+
+## Notifications and alerting
